# spotify-song-classifier

./: .gitignore  README.md  TestSVM.txt  dune  dune-project  http_example.ml  machine_learning.ml  machine_learning.mli  run.ml  sklearn_example.ml  spotify-song-classifier.opam  spotify.ml  spotify.mli  svm.ml  test.mli  test_spotify.ml  testworkflow.sh  torch_example.ml
datasets/deathmetal_vs_classical/: neg_test  neg_train  neg_val  pos_test  pos_train  pos_val  preprocess
datasets/sample-dataset/: neg_test  neg_train  neg_val  pos_test  pos_train  pos_val
models/: chill-svm  deathmetal_vs_classical_model.txt
src/: dune  machine_learning.ml  machine_learning.mli  numpy_helper.ml  run.ml  spotify.ml  spotify.mli  svm.ml  test_spotify.ml
tests/: dune  tests.ml
