(library
 (name spotify)
 (modules spotify)
 (preprocess 
  (pps ppx_deriving_yojson ppx_let lwt_ppx))
 (libraries core sklearn cohttp-lwt-unix lwt yojson ppx_deriving_yojson.runtime))

(library
 (name machine_learning)
 (modules machine_learning)
 (preprocess
  (pps ppx_let))
 (libraries core sklearn spotify))

(library
 (name svm)
 (modules svm)
 (preprocess
  (pps ppx_let))
 (libraries core sklearn machine_learning))

(executables
 (names run test_spotify)
 (modules run test_spotify)
 (libraries
  svm
  spotify
  core
  torch
  cohttp-lwt-unix
  lwt 
  sklearn
  yojson
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving_yojson ppx_let lwt_ppx)))
